--- a/Source/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntTab.razor
@@ -5,7 +5,7 @@
     <div @attributes="@AdditionalAttributes" class="@RootCss" >
         @if (Panels.Count > 0)
         {
-            <ul class="ent-tab-item-container">
+            <ul class="ent-tab-item-container horizontal-scroll">
                 
                 @foreach (var tabPanels in Panels)
                 {
