--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -23,6 +23,7 @@
                         <EntNavMenuTextItem class="bg-light"  Text="Table" Click="@(() => Navigate("/documents/datatable"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Forms" Click="@(() => Navigate("/documents/form"))"/>
                         <EntNavMenuTextItem class="bg-light"  Text="Pagination" Click="@(() => Navigate("/documents/pagination"))"/>
+                        <EntNavMenuTextItem class="bg-light"  Text="MdiTab" Click="@(() => Navigate("/documents/mdi-tabs"))"/>
                     </EntNavMenuGroup>
                     <EntNavMenuGroup Title="Api" Icon="EntIconName.Home">
                         P
