--- a/Source/Enter.UI/Styles/components/_ent_drawer.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_drawer.component.scss
@@ -3,7 +3,7 @@
 :root {
   --ent-drawer-width : 20rem;
   --ent-drawer-z-index: var(--ent-z-index-tertiary);
-  --ent-drawer-bg: var(--ent-bg-base);
+  --ent-drawer-bg: var(--ent-bg-body);
   --ent-drawer-box-shadow: 0px 1px 9px -3px rgba(0, 0, 0, 0.05);
   --ent-drawer-border-color: var(--ent-border-color);
   --ent-drawer-border-width: var(--ent-border-width);
