--- a/Source/Enter.UI/Styles/components/_ent_modal.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_modal.component.scss
@@ -1,8 +1,8 @@
 ﻿:root {
   --ent-modal-space-y: 1rem;
   --ent-modal-space-x: 1rem;
-  --ent-modal-bg: var(--ent-bg-base);
-  --ent-modal-header-bg: var(--ent-bg-base);
+  --ent-modal-bg: var(--ent-bg-body);
+  --ent-modal-header-bg: var(--ent-bg-body);
   --ent-modal-header-color: var(--ent-color-body);
   --ent-modal-border-width: var(--ent-border-width);
   --ent-modal-border-style: var(--ent-border-style);
