--- a/Source/Enter.UI/Styles/components/_ent_tab.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_tab.component.scss
@@ -1,7 +1,7 @@
 ﻿
 :root {
-  --ent-tab-bg: var(--ent-bg-base);
-  --ent-tab-container-bg: var(--ent-bg-base);
+  --ent-tab-bg: var(--ent-bg-body);
+  --ent-tab-container-bg: var(--ent-bg-body);
   --ent-tab-active-bg: var(--ent-bg-base-active);
   --ent-tab-box-shadow: var(--ent-shadow);
   --ent-tab-border-width: var(--ent-border-width);
