--- a/Source/Enter.UI/Styles/components/_ent_nav_menu.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_nav_menu.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   border: $border;
-  background-color: var(--ent-bg-base);
+  background-color: var(--ent-bg-body);
   > * {
     border-bottom: $border;
   }
