--- a/Source/Enter.UI/Styles/themes/dark.theme.scss
+++ b/Source/Enter.UI/Styles/themes/dark.theme.scss
@@ -1,19 +1,21 @@
 html[data-theme="dark"] {
 
   // Background - Body
-  --ent-bg-page: #2b2b2b;
-
+  --ent-bg-page: #222222;
+  --ent-bg-body: #2f2f2f;
+  
   // Background - Base - Shade 5% OF BODY
-  --ent-bg-base: #2e2e2e;
-  --ent-bg-base-highlight: #323232;
-  --ent-bg-base-active: #363636;
-  --ent-bg-base-emphasis: #3b3b3b;
+  
+  --ent-bg-base: #383838;
+  --ent-bg-base-highlight: #3c3c3c;
+  --ent-bg-base-select: #404040;
+  --ent-bg-base-emphasis: #444444;
 
   // Background - Primary
-  --ent-bg-primary: #a855f7;
-  --ent-bg-primary-highlight: #aa59f7;
-  --ent-bg-primary-select: #ac5ef7;
-  --ent-bg-primary-emphasis: #b166f8;
+  --ent-bg-primary: #524eb7;
+  --ent-bg-primary-highlight: #5552b8;
+  --ent-bg-primary-select: #5955ba;
+  --ent-bg-primary-emphasis: #5c59bb;
 
   // Foreground 
   //Body
@@ -22,20 +24,20 @@ html[data-theme="dark"] {
   // Foreground - Base - Tint 5% OF BODY
   --ent-fg-base: #e7e7e7;
   --ent-fg-base-highlight: #e8e8e8;
-  --ent-fg-base-selected: #e8e8e8;
+  --ent-fg-base-select: #e8e8e8;
   --ent-fg-base-emphasis: #e9e9e9;
 
   // Foreground - Base - Tint 95% OF BODY
   --ent-fg-light: #f4f4f4;
   --ent-fg-light-highlight: #f4f4f4;
-  --ent-fg-light-selected: #f4f4f4;
+  --ent-fg-light-select: #f4f4f4;
   --ent-fg-light-emphasis: #f4f4f4;
 
   // Foreground - Primary
-  --ent-fg-primary: #7e40b9;
-  --ent-fg-primary-highlight: #8145bb;
-  --ent-fg-primary-select: #844abd;
-  --ent-fg-primary-emphasis: #8b53c0;
+  --ent-fg-primary: #524eb7;
+  --ent-fg-primary-highlight: #5552b8;
+  --ent-fg-primary-select: #5955ba;
+  --ent-fg-primary-emphasis: #5c59bb;
 
   // Stroke
   // Base - Shade 10% BG Base
@@ -45,13 +47,13 @@ html[data-theme="dark"] {
   --ent-stroke-base-emphasis: #4f4f4f;
 
   // Primary - Shade 10% BG Primary
-  --ent-stroke-primary: #974dde;
-  --ent-stroke-primary-highlight: #9a51df;
-  --ent-stroke-primary-select: #9c56e0;
-  --ent-stroke-primary-emphasis: #a15fe1;
+  --ent-stroke-primary: #524eb7;
+  --ent-stroke-primary-highlight: #5552b8;
+  --ent-stroke-primary-select: #5955ba;
+  --ent-stroke-primary-emphasis: #5c59bb;
   
-  --ent-primary: #673AB7;
-  --ent-primary-emphasis: #7447c5;
+  --ent-primary: #524eb7;
+  --ent-primary-emphasis: #5c59bb;
   --ent-primary-subtle: rgb(103, 58, 183, .15);
 
   --ent-success: #4CAF50;
