--- a/example/Enter.Dashboard/wwwroot/css/app.css
+++ b/example/Enter.Dashboard/wwwroot/css/app.css
@@ -3,7 +3,7 @@
 body, html {
     height: 100%;
     font-family: Shabnam, serif;
-    font-size: 16px;
+    font-size: 14px !important;
 }
 
 #app {
