--- a/Source/Enter.UI/Styles/components/_ent_card.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_card.component.scss
@@ -1,8 +1,8 @@
 ﻿:root {
     --ent-card-space-y: 1rem;
     --ent-card-space-x: 1rem;
-    --ent-card-bg: var(--ent-bg-body);
-    --ent-card-header-bg: var(--ent-bg-body);
+    --ent-card-bg: var(--ent-bg-base);
+    --ent-card-header-bg: var(--ent-bg-base);
     --ent-card-header-color: var(--ent-fg-base);
     --ent-card-border-width: var(--ent-border-width);
     --ent-card-border-style: var(--ent-border-style);
