--- a/Source/Enter.UI/Styles/components/_ent_form.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_form.component.scss
@@ -1,8 +1,8 @@
 ﻿:root {
     //input 
-    --ent-input-bg: var(--ent-bg-base);
-    --ent-input-popover-bg: var(--ent-bg-base-highlight);
-    --ent-input-popover-hover-bg: var(--ent-bg-base-active);
+    --ent-input-bg: var(--ent-bg-neutral);
+    --ent-input-popover-bg: var(--ent-bg-neutral-highlight);
+    --ent-input-popover-hover-bg: var(--ent-bg-neutral-active);
     --ent-input-color: var(--ent-fg-base);
     --ent-input-color-placeholder: var(--ent-fg-base-highlight);
     --ent-input-font-size: var(--ent-size-md);
