--- a/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
@@ -3,7 +3,7 @@
   --ent-toolbar-space-x: var(--ent-size-md);
   --ent-toolbar-space-b: var(--ent-size-xs);
   --ent-toolbar-z-index: var(--ent-z-index-tertiary);
-  --ent-toolbar-bg: var(--ent-bg-body);
+  --ent-toolbar-bg: var(--ent-bg-base);
   --ent-toolbar-border-width: var(--ent-border-width);
   --ent-toolbar-border-style: var(--ent-border-style);
   --ent-toolbar-border-color: var(--ent-stroke-base);
