--- a/Source/Enter.UI/Styles/components/_ent_app_bar.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_app_bar.component.scss
@@ -2,7 +2,7 @@
   --ent-appbar-space-y: 1rem;
   --ent-appbar-space-x: 2rem;
   --ent-appbar-z-index: var(--ent-z-index-tertiary);
-  --ent-appbar-bg: var(--ent-bg-body);
+  --ent-appbar-bg: var(--ent-bg-base);
   --ent-appbar-border-width: var(--ent-border-width);
   --ent-appbar-border-style: var(--ent-border-style);
   --ent-appbar-border-color: var(--ent-border-color);
