--- a/Source/Enter.UI/Styles/components/_ent_nav_menu.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_nav_menu.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   border: $border;
-  background-color: var(--ent-bg-body);
+  background-color: var(--ent-bg-base);
   > * {
     border-bottom: $border;
   }
@@ -52,11 +52,11 @@
     > .ent-nav-menu-group-container {
       height: 0;
       overflow: hidden;
-      background-color: var(--ent-bg-base-highlight);
+      background-color: var(--ent-bg-neutral-highlight);
       
       &.active {
         > .ent-nav-menu-item {
-          background-color: var(--ent-bg-base-emphasis);
+          background-color: var(--ent-bg-neutral-emphasis);
         }
       }
       
