--- a/Source/Enter.UI/Styles/themes/light.theme.scss
+++ b/Source/Enter.UI/Styles/themes/light.theme.scss
@@ -1,57 +1,54 @@
-﻿
-:root {
+﻿:root {
 
-  // Background - Body
-  --ent-bg-page: #e6e6e6;
+  // Background 
   
-  --ent-bg-body: #ffffff;
+  --ent-bg-body: #e6e6e6;
   
-  --ent-bg-base: #fafafa;
-  --ent-bg-base-highlight: #f5f5f5;
-  --ent-bg-base-select: #f0f0f0;
-  --ent-bg-base-emphasis: #ebebeb;
+  --ent-bg-base: #ffffff;
   
-  // Background - Primary
+  --ent-bg-neutral: #fafafa;
+  --ent-bg-neutral-highlight: #f5f5f5;
+  --ent-bg-neutral-select: #f0f0f0;
+  --ent-bg-neutral-emphasis: #ebebeb;
+  
   --ent-bg-primary: #524eb7; 
   --ent-bg-primary-highlight: #504cb3; 
   --ent-bg-primary-select: #4f4bb0;
   --ent-bg-primary-emphasis: #4d49ac;
   
-  // Foreground 
-  //Body
+  // Foreground
+  
   --ent-fg-body: #191919;
 
-  // Foreground - Base - Tint 5% OF BODY
   --ent-fg-base: #252525;
   --ent-fg-base-highlight: #242424;
   --ent-fg-base-select: #232323;
   --ent-fg-base-emphasis: #212121;
 
-  // Foreground - Base - Tint 95% OF BODY
   --ent-fg-light: #f4f4f4;
   --ent-fg-light-highlight: #f4f4f4;
   --ent-fg-light-select: #f4f4f4;
   --ent-fg-light-emphasis: #f4f4f4;
 
-  // Foreground - Primary
   --ent-fg-primary: #524eb7;
   --ent-fg-primary-highlight: #504cb3;
   --ent-fg-primary-select: #4f4bb0;
   --ent-fg-primary-emphasis: #4d49ac;
 
   // Stroke
-  // Base - Shade 10% BG Base
+  
   --ent-stroke-base: #eaeaea;
   --ent-stroke-base-highlight: #e8e8e8;
   --ent-stroke-base-select: #e6e6e6;
   --ent-stroke-base-emphasis: #e4e4e4;
 
-  // Primary - Shade 10% BG Primary
   --ent-stroke-primary: #524eb7;
   --ent-stroke-primary-highlight: #504cb3;
   --ent-stroke-primary-select: #4f4bb0;
   --ent-stroke-primary-emphasis: #4d49ac;
 
+  // Shaders
+  
   --ent-primary: #524eb7;
   --ent-primary-emphasis: #4d49ac;
   --ent-primary-subtle: #e3e3f3;
@@ -87,8 +84,10 @@
   --ent-link: #2196F3;
   --ent-link-emphasis: #0d89ec;
   --ent-link-subtle: #e9f4fe;
-
+  
+  
   //border
+  
   --ent-primary-border-subtle: #b3b9d0;
   --ent-secondary-border-subtle: #aec9f9;
   --ent-success-border-subtle: #9de1d7;
@@ -99,6 +98,7 @@
   --ent-dark-border-subtle: #adb5bd;
 
   // color
+  
   --ent-color-body: #333;
   --ent-color-emphasis: #000000;
   --ent-color-secondary: rgba(7, 20, 55, 0.75);
@@ -109,12 +109,14 @@
   --ent-color-link: #009ef7;
 
   // border
+  
   --ent-border-color: #e9ebec;
   --ent-border-width: 1px;
   --ent-border-style: solid;
   --ent-border-radius: 0.25rem;
-
+  
   // shadow
+  
   --ent-shadow: 0px 0px 20px 0px rgba(76, 87, 125, 0.05);
 
   //body
